<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <ImageView style="@style/icon"
                 android:src="@drawable/ic_support"/>

        <TextView style="@style/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_support" />
    </LinearLayout>
        
    <View style="@style/line" />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/text_support" />

    <Button style="@style/button"
            android:id="@+id/button_support"
            android:layout_width="@dimen/widget_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_support" />        
</LinearLayout>